# fractal-server

./: .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MISSING.md  README.md  data.json  dependabot.yml  doc-requirements.txt  docker-slurm.yml  example.py  extra.css  fractal.config  gen_ref_pages.py  index.html  logs-fractal-server.error  mkdocs.yml  objects.inv  openapi.json  postgres.sh  pyproject.toml  register.sh  sitemap.xml  template_fractal.service  tmp-curl.sh  zensical.toml
.github/: dependabot.yml  pull_request_template.md
benchmarks/: .gitignore  README.md  api_bench.py  bench.html  bench.json  bench_diff.html  bench_diff.json  populate_db.py  runner_config.json  serve.sh  setup_db.sh
changelog/: index.html
cli_reference/: index.html
configuration/: index.html
contribute/: index.html
coverage/: covindex.html  d_0a1a182b5830ad70_workflow_py.html  d_2f2e1dbf6c1a4229___init___py.html  d_3bdad1a27c64b4fa___init___py.html  d_3bdad1a27c64b4fa_executor_py.html  d_58bd1dbe3caee099___init___py.html  d_58bd1dbe3caee099__common_py.html  d_58bd1dbe3caee099_common_py.html  d_5ac19f79d7fdca54___init___py.html  d_63e0d438dde23c6d_job_py.html  d_63e0d438dde23c6d_project_py.html  d_63e0d438dde23c6d_task_py.html  d_63e0d438dde23c6d_workflow_py.html  d_84cfcefae3493ef8___init___py.html  d_84cfcefae3493ef8_manifest_py.html  d_84cfcefae3493ef8_project_py.html  d_84cfcefae3493ef8_state_py.html  d_84cfcefae3493ef8_task_py.html  d_a3e5354dc8db4bd4_config_py.html  d_a3e5354dc8db4bd4_main_py.html  d_a3e5354dc8db4bd4_syringe_py.html  d_a3e5354dc8db4bd4_utils_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_fixtures_server_py.html  d_a44f0ac069e85531_fixtures_slurm_py.html  d_a44f0ac069e85531_fixtures_tasks_py.html  d_b585e142f2084c00___init___py.html  index.html  (+4 more)
tests/data/dummy_package_with_args_schemas/: pyproject.toml
tests/data/dummy_package_with_args_schemas/fractal_tasks_core_alpha/: __FRACTAL_MANIFEST__.json
tests/data/dummy_package_with_args_schemas/fractal_tasks_core_alpha/dev/: lib_args_schemas.py  new_args_schema.py
tests/data/dummy_package_with_args_schemas/fractal_tasks_core_alpha/tasks/: dummy.py  dummy_parallel.py
tests/data/fractal-tasks-dummy/: pyproject.toml
tests/data/fractal-tasks-stresstest/: pyproject.toml
tests/data/fractal-tasks-stresstest/fractal_tasks_stresstest/: __FRACTAL_MANIFEST__.json  prepare_metadata.py  sleep_task.py
tests/data/more_dummy_task_packages/dummy-pkg-3/: pyproject.toml
tests/data/more_dummy_task_packages/dummy-pkg-4/: pyproject.toml
tests/data/more_dummy_task_packages/dummy-pkg-4/src/dummy_pkg_4.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/data/more_dummy_task_packages/dummy_pkg_1/: pyproject.toml
tests/data/more_dummy_task_packages/dummy_pkg_1/src/dummy_pkg_1/: __FRACTAL_MANIFEST__.json
tests/data/more_dummy_task_packages/dummy_pkg_1/src/dummy_pkg_1/tasks/: dummy.py
tests/data/more_dummy_task_packages/dummy_pkg_2/: pyproject.toml
tests/data/more_dummy_task_packages/dummy_pkg_2/src/dummy_pkg_2/: __FRACTAL_MANIFEST__.json  __init__.py  mytask.py
tests/data/my-tasks-fail/: .gitignore  pyproject.toml
tests/data/my-tasks-fail/my_tasks_fail/: __FRACTAL_MANIFEST__.json  task1.py
tests/data/pixi_tasks/mock_pixi_tasks-1.2.3/: pyproject.toml
tests/data/pixi_tasks/mock_pixi_tasks-1.2.3/src/mock_pixi_tasks/: __FRACTAL_MANIFEST__.json  __init__.py  create_images.py
tests/data/pixi_tasks/mock_pixi_tasks-1.2.3/src/mock_pixi_tasks/dev/: task_list.py
tests/data/testing-tasks-mock/: LICENSE  pyproject.toml
tests/data/testing-tasks-mock/.github/workflows/: publish_to_pypi.yml
tests/data/testing-tasks-mock/src/testing_tasks_mock/: __FRACTAL_MANIFEST__.json  __init__.py  generic_task.py  generic_task_parallel.py
tests/data/testing-tasks-mock/src/testing_tasks_mock/dev/: task_list.py
tests/v2/fractal_tasks_fail/missing_executable/: pyproject.toml
tests/v2/fractal_tasks_fail/missing_executable/src/fractal_tasks_mock/: __FRACTAL_MANIFEST__.json  create_cellvoyager_ome_zarr.py  input_models.py  utils.py
tests/v2/fractal_tasks_fail/missing_executable/src/fractal_tasks_mock.egg-info/: PKG-INFO  SOURCES.txt
tests/v2/fractal_tasks_mock/: .gitignore  OBSOLETE_task_list_for_tests.py  README.md  create_manifest.py  init_manifest.py  pyproject.toml  task_models.py  update_package_manifest_and_wheel.sh
tests/v2/fractal_tasks_mock/src/fractal_tasks_mock/: __FRACTAL_MANIFEST__.json  __init__.py  apply_registration_to_image.py  calculate_registration_compute.py  calculate_registration_init.py  cellpose_segmentation.py  create_cellvoyager_ome_zarr.py  create_cellvoyager_ome_zarr_multiplex.py  dummy_converter_compound_s3.py  dummy_converter_s3.py  dummy_converter_s3_compute.py  dummy_converter_s3_init.py  dummy_insert_single_image.py  dummy_remove_images.py  dummy_unset_attribute.py  fill_cellvoyager_ome_zarr.py  find_registration_consensus.py  generic_compound_compute.py  generic_compound_init.py  generic_task.py  generic_task_converter.py  generic_task_parallel.py  illumination_correction.py  illumination_correction_compute.py  illumination_correction_init.py  input_models.py  maximum_intensity_projection.py  new_ome_zarr.py  out_of_memory.py  utils.py
tests/v2/fractal_tasks_mock/src/fractal_tasks_mock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/v2/fractal_tasks_mock/src/fractal_tasks_mock/dev/: task_list.py
tests/v2/fractal_tasks_non_canonical/: create_manifest.py  pyproject.toml  task_models.py  update_package_manifest_and_wheel.sh
tests/v2/fractal_tasks_non_canonical/src/FrAcTaL_TaSkS_MoCk_NoN_CaNoNiCaL.egg-info/: PKG-INFO  SOURCES.txt
tests/v2/fractal_tasks_non_canonical/src/FrAcTaL_TaSkS_NoN_CaNoNiCaL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/v2/fractal_tasks_non_canonical/src/fractal_tasks_non_canonical/: __FRACTAL_MANIFEST__.json  generic_task.py  generic_task_parallel.py  utils.py
tests/v2/fractal_tasks_non_canonical/src/fractal_tasks_non_canonical/dev/: task_list.py
(+3717 files in other folders)
