[project]
name = "fractal-server"
version = "2.18.5"
description = "Backend component of the Fractal analytics platform"
authors = [
    { name="Tommaso Comparin", email="tommaso.comparin@exact-lab.it" },
    { name="Marco Franzon", email="marco.franzon@exact-lab.it" },
    { name="Yuri Chiucconi", email="yuri.chiucconi@exact-lab.it" },
    { name="Jacopo Nespolo", email="jacopo.nespolo@exact-lab.it" },
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi >= 0.128.0, <0.129.0",
    "sqlmodel == 0.0.31",
    "sqlalchemy[asyncio] >=2.0.23,<2.1",
    "fastapi-users[oauth] >=15,<16",
    "alembic >=1.13.1, <2.0.0",
    "uvicorn >= 0.40.0, <0.41.0",
    "uvicorn-worker == 0.4.0",
    "pydantic >=2.12.0,<2.13.0",
    "pydantic-settings ==2.12.0",
    "packaging >= 25.0.0, <26.0.0",
    "fabric >= 3.2.2, <3.3.0",
    "gunicorn >=23.0,<24.0",
    "psycopg[binary] >= 3.1.0, <4.0.0",
    "tomli_w >=1.2.0, <1.3.0 "
]

[project.urls]
homepage = "https://github.com/fractal-analytics-platform/fractal-server"
repository = "https://github.com/fractal-analytics-platform/fractal-server"
documentation = "https://fractal-analytics-platform.github.io/fractal-server"
changelog = "https://github.com/fractal-analytics-platform/fractal-server/blob/main/CHANGELOG.md"

[project.scripts]
fractalctl = "fractal_server.__main__:run"

[dependency-groups]
dev = [
    "asgi-lifespan >2.0.0,<3.0.0",
    "pytest>=8.4.0,<8.5.0",
    "pytest-env >=1.1.5,<1.2.0",
    "httpx >=0.28.0,<0.29.0",
    "devtools ==0.12",
    "pytest-asyncio >= 1.2.0,<1.3.0",
    "bumpver >=2024.0",
    "pre-commit ==4.2.0",
    "coverage[toml]>=7.12.0,<7.13.0",
    "pytest-docker >=3.2.0,<3.3.0",
    "mypy >= 1.9",
    "pytest-subprocess >=1.5.0,<1.6.0",
    "a2wsgi >=1.10.0,<1.11.0",
    "jinja2 >=3.1.3,<3.1.4",
    "pyyaml>=6.0.0"
]

docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.1",
    "mkdocs-material==9.7.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-section-index==0.3.10",
    "mkdocs-include-markdown-plugin==7.2.0",
    "mkdocs-render-swagger-plugin==0.1.2",
    "pyyaml>=6.0.0",
    "click == 8.2.1"
]


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

# See https://docs.astral.sh/uv/concepts/build-backend/#file-inclusion-and-exclusion
[tool.uv.build-backend]
module-name = "fractal_server"
module-root = ""
source-exclude = ["tmp*", "fractal_server/data_migrations/old", "fractal_server/data_migrations/README.md", "fractal_server/json_schemas", "fractal_server/migrations/script.py.mako"]
wheel-exclude = ["tmp*", "fractal_server/data_migrations/old", "fractal_server/data_migrations/README.md", "fractal_server/json_schemas", "fractal_server/migrations/script.py.mako"]



[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "error::RuntimeWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]
markers = ["container", "ssh", "fails_on_macos", "oauth"]

[tool.bumpver]
current_version = "2.18.5"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"fractal_server/__init__.py" = [
    '__VERSION__ = "{version}"$'
]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
omit = ["tests/*", "benchmarks/*", "fractal_server/json_schemas/*", "*/.venv/*"]

[tool.coverage.report]
omit = ["tests/*", "benchmarks/*", "fractal_server/json_schemas/*", "*/.venv/*"]

[[tool.mypy.overrides]]
module = ["devtools", "uvicorn", "pytest", "asgi_lifespan", "asyncpg", "sqlmodel", "pydantic", "sqlalchemy", "sqlalchemy.types", "pydantic.types", "dotenv", "pydantic_settings", "sqlalchemy.engine", "sqlalchemy.ext.asyncio", "sqlalchemy.orm", "sqlalchemy.dialects.postgresql", "sqlalchemy.ext.orderinglist", "fastapi_users", "uvicorn_worker", "gunicorn.glogging"]
ignore_missing_imports = true


[tool.pytest_env]
PYTHONASYNCIODEBUG=1
JWT_SECRET_KEY="very_secret_key"
POSTGRES_USER="postgres"
POSTGRES_PASSWORD="postgres"
POSTGRES_DB="fractal_test"
FRACTAL_API_MAX_JOB_LIST_LENGTH=1
FRACTAL_GRACEFUL_SHUTDOWN_TIME=0.05
FRACTAL_DEFAULT_GROUP_NAME="All"


[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
