[tool.poetry]
name = "fractal-tasks-dummy"
version = "0.1.0"
description = ""
authors = ["Jacopo Nespolo <jacopo.nespolo@exact-lab.it>"]
readme = "README.md"
packages = [{include = "fractal_tasks_dummy"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
