[project]
name = "fractal-tasks-mock"
version = "0.0.1"
description = "Fake tasks package"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Your Name", email = "first.last@example.com" },
]
requires-python = ">=3.8"
dependencies = ["pydantic<2"]

[project.optional-dependencies]
dev = ["fractal-tasks-core<1.1.0", "build"]
my_extra = ["devtools"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_tasks_mock"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
