[project]
name = "FrAcTaL-TaSkS-NoN-CaNoNiCaL"
version = "0.0.1"
description = "Fake tasks package"
readme = "README.md"
authors = [
    { name = "Your Name", email = "first.last@example.com" },
]
requires-python = ">=3.9"
dependencies = ["fractal-task-tools==0.1.1",]

[project.optional-dependencies]
dev = ["devtools", "build"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_tasks_non_canonical"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
