[project]
name = "dummy-pkg-4"
version = "0.0.1"
description = ""
authors = [{ name = "XY", email = "x@y.z" }]

# Required Python version and dependencies
requires-python = ">=3.8"
dependencies = []

# Build options
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dummy_pkg_4"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
