[project]
name = "dummy_pkg_1"
version = "0.0.1"
description = ""
authors = [{ name = "X Y", email = "x@y.z" }]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dummy_pkg_1"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
