[project]
name = "mock-pixi-tasks"
version = "1.2.3"
description = "Shared tools for Fractal tasks"
authors = [
    {name="Mock", email="mock@example.org"},
]
license = {text ="BSD-3-Clause"}
requires-python = ">=3.11,<3.15"
dependencies = ["fractal-task-tools ==0.4.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mock_pixi_tasks"]

requires-python = ">=3.11, <3.15"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
mock-pixi-tasks = { path = ".", editable = true }
