[project]
name = "fractal-tasks-mock"
version = "0.0.1"
description = "Fake tasks package"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Your Name", email = "first.last@example.com" },
]
requires-python = ">=3.9"
dependencies = ["pydantic>=2", "fractal-task-tools==0.1.1",]

[project.optional-dependencies]
dev = ["devtools", "build"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fractal_tasks_mock"]

# Always include the __FRACTAL_MANIFEST__.json file in the package
[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
